--- a/www/partials/world/index.html
+++ b/www/partials/world/index.html
@@ -31,8 +31,24 @@
     <!-- radar component -->
     <script type="text/javascript" src="js/radar.js"></script>
     <script>
+        $(document).ready(function() {
+            if(false) {
+                $("#popupDialog").popup("open");
+            } else {
+                $("#popupLoading").popup("open");
+            }
+        });
         function closeWikitudePlugin() {
             document.location = 'architectsdk://action=closeWikitudePlugin';
+        }
+        function closePopupIntro() {
+            $("#popupDialog").popup("close");
+        }
+        function closePopupIntroForever() {
+            $("#popupDialog").popup("close");
+        }
+        function closePopupArrived() {
+            $("#popupArrived").popup("close");
         }
     </script>
 </head>
@@ -41,24 +57,59 @@
             <!-- MAIN PAGE CONTENT -->
 
             <!-- header of UI holding feature buttons -->
-            <div id ="header-status" data-role="header" data-position="fixed" data-theme="c">
+            <div id="header-status" data-role="header" data-position="fixed" data-theme="c">
                 <a href="javascript: World.showRange();" data-icon="gear" data-inline="true" data-mini="true">Range</a>
                 <!--<h1></h1>-->
                 <a href="javascript: closeWikitudePlugin();" data-inline="true" data-mini="true">Close</a>
             </div>
 
-            <!-- the radar div - Wikitude SDK radar will be drawn into this div -->
-            <div class="radarContainer_left" id="radarContainer"></div>
 
             <!-- transparent footer-->
             <div data-role="footer" class="ui-bar" data-theme="f" data-position="fixed" style="text-align:center;">
+                <!-- the radar div - Wikitude SDK radar will be drawn into this div -->
+                <div class="radarContainer_left" id="radarContainer"></div>
                 <!-- small status-button -->
                 <a style="text-align:right;" id="popupInfoButton" href="#popupInfo" data-rel="popup" data-role="button" class="ui-icon-alt" data-inline="true" data-transition="pop" data-icon="alert" data-theme="e" data-iconpos="notext">Log</a> </p>
                 <!-- popup displayed when button clicked -->
                 <div data-role="popup" id="popupInfo" class="ui-content" data-theme="e" style="max-width:350px;">
-                  <p style="text-align:right;" id="status-message">Trying to find out where you are</p>
+                  <p style="text-align:right;" id="status-message">Locating...</p>
                 </div>
             </div>
+        
+            <!-- POPUPS, ONLY VISIBLE ON DEMAND -->
+
+            <!-- POPUP: First Launch -->
+            <div data-history="false" data-role="popup" data-dismissible="false" id="popupDialog" data-overlay-theme="a" data-theme="a" style="max-width:400px;" class="ui-corner-all ui-popup ui-body-a ui-overlay-shadow">
+                <div data-role="header" data-theme="a" class="ui-corner-top ui-header ui-bar-a" role="banner">
+                    <h1 class="ui-title" role="heading" aria-level="1">ARTour</h1>
+                </div>
+                <div role="main" class="ui-corner-bottom ui-content">
+                    <h3 class="ui-title">Instructions</h3>
+                    <p>These are some really descriptive instructions.</p>
+                    <a onclick="closePopupIntroForever()" data-role="button" data-inline="true" data-theme="a" class="ui-link ui-btn ui-btn-a ui-btn-inline ui-shadow ui-corner-all" role="button">Never Show</a>
+                    <a onclick="closePopupIntro()" data-role="button" data-inline="true" data-theme="a" class="ui-link ui-btn ui-btn-a ui-btn-inline ui-shadow ui-corner-all" role="button">Close</a>
+                </div>
+            </div>
+        
+            <!-- POPUP: Arrived at destination -->
+            <div data-history="false" data-role="popup" data-dismissible="false" id="popupArrived" data-overlay-theme="a" data-theme="a" style="max-width:400px;" class="ui-corner-all ui-popup ui-body-a ui-overlay-shadow">
+                <div data-role="header" data-theme="a" class="ui-corner-top ui-header ui-bar-a" role="banner">
+                    <h1 class="ui-title" role="heading" aria-level="1">Arrived</h1>
+                </div>
+                <div role="main" class="ui-corner-bottom ui-content">
+                    <h3 class="ui-title">You have arrived at the location.</h3>
+                    <p>The art piece is within 10 meters of your current location.</p>
+                    <a onclick="closePopupArrived()" data-role="button" data-inline="true" data-theme="a" class="ui-link ui-btn ui-btn-a ui-btn-inline ui-shadow ui-corner-all" role="button">Close</a>
+                </div>
+            </div>
+        
+            <!-- POPUP: Loading... -->
+            <div data-history="false" data-role="popup" data-dismissible="false" id="popupLoading" data-overlay-theme="a" data-theme="a" style="max-width:400px;" class="ui-corner-all ui-popup ui-body-a ui-overlay-shadow">
+                <div role="main" class="ui-corner-bottom ui-content">
+                    Loading...
+                </div>
+            </div>
+            
 
             <!-- PANELS, ONLY VISIBLE ON DEMAND -->
 
@@ -73,10 +124,10 @@
                  <div data-role="content">
                     <!-- title -->
                     <h3 id="poi-detail-title"></h3>
-                    <!-- description -->
-                    <h4 id="poi-detail-description"></h4>
                     <!-- distance -->
                     <h4>Distance: <a id="poi-detail-distance"></a></h4>
+                    <!-- description -->
+                    <h4 id="poi-detail-description"></h4>
                 </div>
             </div>
 
